--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,63 +1,68 @@
-<section class="section colored" id="contact-us">
+<div class="map-section">
+  <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3415.177743506721!2d80.95163785462165!3d26.774817974288503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399bfb712140d289%3A0xaac66eb8f2c2b914!2sVishishth%20Park%2C%20Amar%20Shaheed%20Path%2C%20Babhnan%20Basti%2C%20Vrindavan%20Colony%2C%20Lucknow%2C%20Uttar%20Pradesh%20226029!5e0!3m2!1sen!2sin!4v1624079296660!5m2!1sen!2sin" frameborder="0" allowfullscreen></iframe>
+
+</div>
+
+<section id="contact" class="contact">
   <div class="container">
-      <!-- ***** Section Title Start ***** -->
-      <div class="row">
-          <div class="col-lg-12">
-              <div class="center-heading">
-                  <h2 class="section-title">Talk To Us</h2>
-              </div>
-          </div>
-          <div class="offset-lg-3 col-lg-6">
-              <div class="center-text">
-                  <p>Want to get in touch? We'd love to hear from you. Here's how you can reach us...</p>
-              </div>
-          </div>
-      </div>
-      <!-- ***** Section Title End ***** -->
 
-      <div class="row">
-          <!-- ***** Contact Text Start ***** -->
-          <div class="col-lg-4 col-md-6 col-sm-12">
-              <h5 class="margin-bottom-30">Keep in touch</h5>
-              <div class="contact-text">
-                  <p>029, Sector 6A, Vrindavan yojan, Lucknow, 226029.
-                  <br>+918960843600</p>
-                  <p>You are NOT allowed to re-distribute BookWorms template on any template collection websites. Thank you.</p>
-              </div>
-          </div>
-          <!-- ***** Contact Text End ***** -->
+    <div class="row justify-content-center" data-aos="fade-up">
 
-          <!-- ***** Contact Form Start ***** -->
-          <div class="col-lg-8 col-md-6 col-sm-12">
-              <div class="contact-form">
-                  <form id="contact" action="" method="get">
-                    <div class="row">
-                      <div class="col-lg-6 col-md-12 col-sm-12">
-                        <fieldset>
-                          <input name="name" type="text" class="form-control" id="name" placeholder="Full Name" required="">
-                        </fieldset>
-                      </div>
-                      <div class="col-lg-6 col-md-12 col-sm-12">
-                        <fieldset>
-                          <input name="email" type="email" class="form-control" id="email" placeholder="E-Mail Address" required="">
-                        </fieldset>
-                      </div>
-                      <div class="col-lg-12">
-                        <fieldset>
-                          <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your Message" required=""></textarea>
-                        </fieldset>
-                      </div>
-                      <div class="col-lg-12">
-                        <fieldset>
-                          <button nbButton type="submit" id="form-submit" class="main-button">Send Message</button>
-                        </fieldset>
-                      </div>
-                    </div>
-                  </form>
-              </div>
+      <div class="col-lg-10">
+
+        <div class="info-wrap">
+          <div class="row">
+            <div class="col-lg-4 info">
+              <i class="far fa-map"></i>
+              <h4>Location:</h4>
+              <p>BV02, Sector 6<br>Lucknow, UP 226029</p>
+            </div>
+
+            <div class="col-lg-4 info mt-4 mt-lg-0">
+              <i class="far fa-envelope"></i>
+              <h4>Email:</h4>
+              <p>admin@bookworms.com<br>dj10@bookworms.com</p>
+            </div>
+
+            <div class="col-lg-4 info mt-4 mt-lg-0">
+              <i class="fas fa-mobile-alt"></i>
+              <h4>Call:</h4>
+              <p>+91 8960843600<br>+91 8299479522</p>
+            </div>
           </div>
-          <!-- ***** Contact Form End ***** -->
+        </div>
+
       </div>
+
+    </div>
+
+    <div class="row mt-5 justify-content-center" data-aos="fade-up">
+      <div class="col-lg-10">
+        <form  method="post" role="form" class="email-form">
+          <div class="row">
+            <div class="col-md-6 form-group">
+              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+            </div>
+            <div class="col-md-6 form-group mt-3 mt-md-0">
+              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+            </div>
+          </div>
+          <div class="form-group mt-3">
+            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+          </div>
+          <div class="form-group mt-3">
+            <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+          </div>
+          <div class="my-3">
+            <div class="loading">Loading</div>
+            <div class="error-message"></div>
+            <div class="sent-message">Your message has been sent. Thank you!</div>
+          </div>
+          <div class="text-center"><button type="submit">Send Message</button></div>
+        </form>
+      </div>
+
+    </div>
+
   </div>
 </section>
-<!-- ***** Contact Us End ***** -->
