--- a/src/app/admin/layout/layout.component.html
+++ b/src/app/admin/layout/layout.component.html
@@ -5,7 +5,7 @@
         <nb-actions size="medium">
 
           <nb-action>
-            <button nbButton status="primary" (click)="toggle()"><nb-icon icon="menu-2-outline" status="control"></nb-icon></button>
+            <button nbButton status="success" (click)="toggle()"><nb-icon icon="menu-2-outline" status="control"></nb-icon></button>
           </nb-action>
 
           <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']" routerLinkActive="router-link-active" >
