--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,23 +10,6 @@
       <ul>
         <li><a [routerLink]="['/home']" routerLinkActive="router-link-active">Home</a></li>
 
-
-        <li class="dropdown"><a [routerLink]="['/app/aboutus']" routerLinkActive="router-link-active" ><span>About</span> <i class="bi bi-chevron-down"></i></a>
-          <ul>
-            <li><a [routerLink]="['/app/aboutus']" routerLinkActive="router-link-active" >About Us</a></li>
-            <li><a href="team.html">Team</a></li>
-            <li><a [routerLink]="['/app/listrequests']" routerLinkActive="router-link-active" >posts</a></li>
-            <li class="dropdown"><a href="#"><span>List Novels</span> <i class="bi bi-chevron-right"></i></a>
-              <ul>
-                <li><a [routerLink]="['/app/buynovel']" routerLinkActive="router-link-active">Purchase Novels</a></li>
-                <li><a [routerLink]="['/app/exchangenovel']" routerLinkActive="router-link-active">Exchange Novels</a></li>
-                <li><a [routerLink]="['/app/rentnovel']" routerLinkActive="router-link-active">Rent Novels</a></li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <!-- dropdown novel list -->
-
         <li class="dropdown"><a href="#"><span>List Novels</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a [routerLink]="['/app/exchangenovel']" routerLinkActive="router-link-active">Exchange Novels</a></li>
@@ -35,11 +18,14 @@
           </ul>
         </li>
 
-        <!-- <li><a [routerLink]="['/app/exchangenovel']" routerLinkActive="router-link-active" >Novels</a></li> -->
-        <li><a [routerLink]="['/profile']" routerLinkActive="router-link-active">Profile</a></li>
-        <li><a href="pricing.html">Pricing</a></li>
-        <li><a [routerLink]="['/app/listrequests']" routerLinkActive="router-link-active">Posts</a></li>
+
+
+
+        <li><a [routerLink]="['/app/listrequest']" routerLinkActive="router-link-active">Posts</a></li>
         <li><a [routerLink]="['/app/contactus']" routerLinkActive="router-link-active">Contact</a></li>
+        <li class="dropdown"><a [routerLink]="['/app/aboutus']" routerLinkActive="router-link-active"><span>About</span>
+            <i class="bi bi-chevron-down"></i></a>
+        <li><a [routerLink]="['/user']" routerLinkActive="router-link-active">Profile</a></li>
 
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
@@ -73,35 +59,10 @@
               can get it from our website.
             </p>
 
-            <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
+            <!-- <div class="text-center"><a href="" class="btn-get-started">Read More</a></div> -->
           </div>
         </div>
       </div>
-
-      <!-- Slide 2 -->
-      <div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpg);">
-        <div class="carousel-container">
-          <div class="carousel-content animate__animated animate__fadeInUp">
-            <h2>Lorem Ipsum Dolor</h2>
-            <p>Some of the novels are now very rare and are neither being published nor available in shops or at any
-              website.</p>
-            <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Slide 3 -->
-      <div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpg);">
-        <div class="carousel-container">
-          <div class="carousel-content animate__animated animate__fadeInUp">
-            <h2>Sequi ea ut et est quaerat</h2>
-            <p>On this site People can post their novels collection on our website, so that people who need those
-              novels, can get it from our website.</p>
-            <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>
-          </div>
-        </div>
-      </div>
-
     </div>
 
     <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
@@ -121,36 +82,7 @@
 
 <main id="main">
 
-  <!-- ======= About Us Section ======= -->
-  <section id="about-us" class="about-us">
-    <div class="container" data-aos="fade-up">
 
-      <div class="row content">
-        <div class="col-lg-6" data-aos="fade-right">
-          <h2>Eum ipsam laborum deleniti velitena</h2>
-          <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
-        </div>
-        <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
-          <p>
-            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum
-          </p>
-          <ul>
-            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-            <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-              irure dolor in reprehenderit in</li>
-          </ul>
-          <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section><!-- End About Us Section -->
 
   <!-- ======= Services Section ======= -->
   <section id="services" class="services section-bg">
@@ -162,217 +94,58 @@
             <div class="card-body">
               <div>
                 <img class="avatar" [src]="url+request.user.avatar" alt="">
+                <br><br><br>
                 <B> {{request.user.fullname}}</B>
               </div>
-              <br>
+
               <h4 class="nt">{{request.title}}</h4>
               <p class="text-muted">{{request.content.substring(0, 100)}} ...</p>
             </div>
-            <!-- <nb-card-action style="padding: 1rem;">
-                <button class="btn btn-primary" [routerLink]="['/app/listrequest']" >View More</button>
-              </nb-card-action> -->
-
-              <div class="d-grid gap-2 d-md-flex">
-                <button type="button" class="btn btn-warning px-3" (click)="open(request)"><i class="fas fa-regular fa-expand" aria-hidden="true"></i></button>
-                <button type="button" class="btn btn-warning px-3" (click)="repondToUser(request.user._id)"><i class="fas fa-paper-plane" aria-hidden="true"></i></button>
-              </div>
-                <!-- <button class="btn btn-primary" >Respond</button>
-                <button class="btn btn-primary" >Open</button> -->
-
+            <div class="d-grid gap-2 d-md-flex">
+              <button type="button" class="btn btn-warning px-3" (click)="open(request)"><i
+                  class="fas fa-regular fa-expand" aria-hidden="true"></i></button>
+              <button type="button" class="btn btn-warning px-3" (click)="repondToUser(request.user._id)"><i
+                  class="fas fa-paper-plane" aria-hidden="true"></i></button>
+            </div>
           </div>
         </div>
       </div>
       <br>
-      <button class="btn btn-danger"
-      [routerLink]="['/app/listrequest']"
-      routerLinkActive="router-link-active">
-      View More</button>
+      <button class="btn btn-danger" [routerLink]="['/app/listrequest']" routerLinkActive="router-link-active">
+        View More</button>
     </div>
   </section>
 
-  <!-- End Services Section -->
-
-  <!-- ======= Portfolio Section ======= -->
-  <section id="portfolio" class="portfolio">
+  <section>
     <div class="container">
+      <div class="row">
+        <div class="col-md-3 mt-5" *ngFor="let novel of novelList">
+          <div class="card">
+              <div class="card-img" [routerLink]="['/app/noveldetails', novel._id]"
+                routerLinkActive="router-link-active" [ngStyle]="{backgroundImage: 'url('+url+novel.avatar+')'}">
+              </div>
 
-      <div class="row" data-aos="fade-up">
-        <div class="col-lg-12 d-flex justify-content-center">
-          <ul id="portfolio-flters">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">App</li>
-            <li data-filter=".filter-card">Card</li>
-            <li data-filter=".filter-web">Web</li>
-          </ul>
+
+              <div class="card-body" [routerLink]="['/app/noveldetails', novel._id]"
+                routerLinkActive="router-link-active">
+                <h4 class="nt">{{novel.title}}</h4>
+                <p class="text-muted">{{novel.genre}}</p>
+                <br>
+                <div>
+                  <img class="avatar1" [src]="url+novel.user.avatar" alt="">
+                  <B> {{novel.user.fullname}}</B>
+                </div>
+
+                <!-- <div class="avatar">
+                  <nb-user size="medium" [name]="novel.user.fullname" [picture]="url+novel.user.avatar">
+                  </nb-user>
+                </div> -->
+                <p class="price">{{novel.price | currency:'INR'}}</p>
+              </div>
+            </div>
         </div>
       </div>
-
-      <div class="row portfolio-container" data-aos="fade-up">
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-          <div class="portfolio-info">
-            <h4>App 1</h4>
-            <p>App</p>
-            <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
-              class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-          <div class="portfolio-info">
-            <h4>Web 3</h4>
-            <p>Web</p>
-            <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery"
-              class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-          <div class="portfolio-info">
-            <h4>App 2</h4>
-            <p>App</p>
-            <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery"
-              class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-          <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-          <div class="portfolio-info">
-            <h4>Card 2</h4>
-            <p>Card</p>
-            <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery"
-              class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-          <div class="portfolio-info">
-            <h4>Web 2</h4>
-            <p>Web</p>
-            <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery"
-              class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-          <div class="portfolio-info">
-            <h4>App 3</h4>
-            <p>App</p>
-            <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery"
-              class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-          <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-          <div class="portfolio-info">
-            <h4>Card 1</h4>
-            <p>Card</p>
-            <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery"
-              class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-          <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-          <div class="portfolio-info">
-            <h4>Card 3</h4>
-            <p>Card</p>
-            <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery"
-              class="portfolio-lightbox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-          <div class="portfolio-info">
-            <h4>Web 3</h4>
-            <p>Web</p>
-            <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery"
-              class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-            <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-          </div>
-        </div>
-
-      </div>
-
     </div>
-  </section><!-- End Portfolio Section -->
-
-  <!-- ======= Our Clients Section ======= -->
-  <section id="clients" class="clients">
-    <div class="container" data-aos="fade-up">
-
-      <div class="section-title">
-        <h2>Clients</h2>
-      </div>
-
-      <div class="row no-gutters clients-wrap clearfix" data-aos="fade-up">
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-7.png" class="img-fluid" alt="">
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-6">
-          <div class="client-logo">
-            <img src="assets/img/clients/client-8.png" class="img-fluid" alt="">
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </section><!-- End Our Clients Section -->
+  </section>
 
 </main><!-- End #main -->
