--- a/src/app/user/layout/layout.component.html
+++ b/src/app/user/layout/layout.component.html
@@ -4,7 +4,7 @@
     <!-- always visible -->
     <nb-actions size="medium">
       <nb-action>
-        <button nbButton status="primary" (click)="toggle()"><nb-icon icon="menu-outline" status="control"></nb-icon></button>
+        <button nbButton status="success" (click)="toggle()"><nb-icon icon="menu-outline" status="control"></nb-icon></button>
       </nb-action>
 
       <nb-action nbTooltip="Home" nbTooltipIcon="home-outline" [routerLink]="['/home']" routerLinkActive="router-link-active" >
