--- a/src/app/authentication/layout/layout.component.html
+++ b/src/app/authentication/layout/layout.component.html
@@ -54,7 +54,7 @@
     <nb-layout-column>
       <router-outlet></router-outlet>
     </nb-layout-column>
-    <nb-layout-footer>
+    <!-- <nb-layout-footer>
 
-    </nb-layout-footer>
+    </nb-layout-footer> -->
 </nb-layout>
