--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,46 @@
+<!-- ======= Header ======= -->
+<header id="header" class="fixed-top">
+  <div class="container d-flex align-items-center">
+
+    <h1 class="logo me-auto"><a href="index.html"><span>BOOK</span>WORMS</a></h1>
+    <!-- Uncomment below if you prefer to use an image logo -->
+    <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
+    <nav id="navbar" class="navbar order-last order-lg-0">
+      <ul>
+        <li><a [routerLink]="['/home']" routerLinkActive="router-link-active">Home</a></li>
+
+        <li class="dropdown"><a href="#"><span>List Novels</span> <i class="bi bi-chevron-down"></i></a>
+          <ul>
+            <li><a [routerLink]="['/app/exchangenovel']" routerLinkActive="router-link-active">Exchange Novels</a></li>
+            <li><a [routerLink]="['/app/buynovel']" routerLinkActive="router-link-active">Purchase Novels</a></li>
+            <li><a [routerLink]="['/app/rentnovel']" routerLinkActive="router-link-active">Rent Novels</a></li>
+          </ul>
+        </li>
+
+
+
+
+        <li><a [routerLink]="['/app/listrequest']" routerLinkActive="router-link-active">Posts</a></li>
+        <li><a [routerLink]="['/app/contactus']" routerLinkActive="router-link-active">Contact</a></li>
+        <li class="dropdown"><a [routerLink]="['/app/aboutus']" routerLinkActive="router-link-active"><span>About</span>
+            <i class="bi bi-chevron-down"></i></a>
+        <li><a [routerLink]="['/user']" routerLinkActive="router-link-active">Profile</a></li>
+
+      </ul>
+      <i class="bi bi-list mobile-nav-toggle"></i>
+    </nav><!-- .navbar -->
+
+    <div class="header-social-links d-flex">
+      <a href="#" class="twitter"><i class="bu bi-twitter"></i></a>
+      <a href="#" class="facebook"><i class="bu bi-facebook"></i></a>
+      <a href="#" class="instagram"><i class="bu bi-instagram"></i></a>
+      <a href="#" class="linkedin"><i class="bu bi-linkedin"></i></a>
+    </div>
+
+  </div>
+</header><!-- End Header -->
+
 <!-- ======= Hero Section ======= -->
 <section id="hero">
   <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -15,10 +58,13 @@
               On this site People can post their novels collection on our website, so that people who need those novels,
               can get it from our website.
             </p>
+
+            <!-- <div class="text-center"><a href="" class="btn-get-started">Read More</a></div> -->
           </div>
         </div>
       </div>
     </div>
+
   </div>
 </section><!-- End Hero -->
 
